--- a/src/templates/iconfont.css
+++ b/src/templates/iconfont.css
@@ -6,7 +6,7 @@
 		url('<%= fontPath %><%= fontName %>.ttf') format('truetype');
 }
 
-.iconfont {
+.icon {
 	font-family: "<%= fontName %>" !important;
   font-size:16px;
   font-style:normal;
@@ -16,7 +16,7 @@
 }
 
 <% _.each(glyphs, function(glyph) { %>
-.icon-<%= glyph.fileName %>:before {
+.icon-<% glyph.fileName %>:before {
 	content: "\<%= glyph.codePoint %>";
 }
 <% }); %>
